--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,4 @@
 = PAC Info Tool
 
-Simple tool that uses a PAC[1] file to determine what the proper proxy is for
-a given URL.
+Simple tool that uses a PAC footnote:[https://en.wikipedia.org/wiki/Proxy_auto-config] file to determine what the proper proxy is for a given URL.
 
-[1] https://en.wikipedia.org/wiki/Proxy_auto-config
