Add example how to use gen-proxy-env

--- a/README.adoc
+++ b/README.adoc
@@ -3,3 +3,9 @@
 Simple tool that uses a PAC footnote:[https://en.wikipedia.org/wiki/Proxy_auto-config] file to determine what the proper proxy is for a given URL.
 
 gen-proxy-env will output the needed proxy settings in a format ready for /etc/environment.
+
+Example how to use it:
+
+```
+$ gen-proxy-env --pac-url http://PROXY_AUTOCACHE google.com
+```
